--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,14 @@
 /* Global */
 
 html {
-    font-size: 62.5%;
+    font-size: 78.5%;
 }
 
 body {
 	background: #ecf0f1;
     color: #2d2d2d;
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 15px; font-size: 1rem;
+    font-size: 15px; font-size: 1.5rem;
     font-weight: 300;
     line-height: 22px;
     /* margin-top: 60px; */
@@ -343,6 +343,7 @@ a:hover {
 
 #welcome h2 {
 	font-family: 'Open Sans', sans-serif;
+	background:#fff;
 	font-size:40px;
 	font-weight:300;
 }
