--- a/css/style.css
+++ b/css/style.css
@@ -336,7 +336,7 @@ a:hover {
 	background-position: center top;
 	margin-left: -50px;
 	position: relative;
-	padding:40px;
+	font-size:30px;
 	background:#fff;
 	text-align:center;
 }
