--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 ﻿/*!
  * Flat & Scroll - Multipurpose One Page Theme
  *
- * Copyright 2013 
+ * Copyright 2013
  * Created by: Carlos Alvarez
  * URL: http://www.basicoh.com
  * Designed and built based on Twitter Bootstrap.
@@ -171,9 +171,9 @@ a:hover {
 }
 */
 
-	
 
-/* General Styling */ 
+
+/* General Styling */
 
 #wrapper {
 	overflow: hidden;
@@ -408,14 +408,14 @@ a:hover {
 #twitter p {
 	text-align:center;
 	margin-bottom:140px;
-	
+
 }
 
 #twitter bold {
 	color:#c0392b;
 }
 
-/* Section 1 */ 
+/* Section 1 */
 
 #section1 {
 	background:#7f8c8d;
@@ -427,7 +427,7 @@ a:hover {
 }
 
 #section1 .intro {
-	
+
 	text-align:center
 }
 
@@ -436,8 +436,9 @@ a:hover {
 }
 
 #section1 .intro h1 {
-	color: #F1F1F1;
+	color: white;
     font-size: 45px; font-size: 4.5rem;
+    text-shadow: 4px 4px black;
     font-weight: 500;
     letter-spacing: -2px;
     line-height: 85px;
@@ -446,7 +447,7 @@ a:hover {
 }
 
 #section1 .intro h3 {
-	color: #F1F1F1;
+	color: black;
     font-size: 26px; font-size: 2.6rem;
     font-weight: 100;
     line-height: 28px;
@@ -456,7 +457,7 @@ a:hover {
 
 }
 
-/* Section 2 */ 
+/* Section 2 */
 
 #section2{
 }
@@ -495,11 +496,11 @@ a:hover {
 
 .service:hover {
 	background-color:#f5f7f8;
-	border-bottom:5px #c0392b solid; 
+	border-bottom:5px #c0392b solid;
 }
 
 
-/* Section 3 */ 
+/* Section 3 */
 
 #section3 {
 	background-image:url(../img/project-bg.jpg);
@@ -542,7 +543,7 @@ a:hover {
 .pricing-column {
 	list-style:none;
 	position:relative;
-	
+
 	-webkit-transition:0.3s;
 	-moz-transition:0.3s;
 	transition:0.3s;
@@ -718,7 +719,7 @@ a:hover {
 
 
 @media screen and (min-width: 1800px) {
-	
+
 	#section1 {
 		padding: 300px 0 !important;
 	}
@@ -726,19 +727,19 @@ a:hover {
 
 
 @media screen and (max-width: 1320px) {
-	
+
 	#section1 {
 		background-size: 1320px auto;
 	}
 }
 
 @media screen and (min-width: 1200px) {
-	
-	
+
+
 	#section1 {
 		padding: 170px 0;
 	}
-	
+
 	#section1 .intro h1 {
 	    font-size: 90px; font-size: 9.0rem;
 	    line-height: 100px;
@@ -750,11 +751,11 @@ a:hover {
 	    line-height: 34px;
 	    width: 90%;
 	}
-	
+
 	.section h2 {
 	    font-size: 67px; font-size: 6.7rem;
 	}
-			
+
 	.container-fluid {
 	    width: 1024px;
 	}
@@ -767,52 +768,52 @@ a:hover {
 		margin-left: -50px;
 		padding: 135px 0;
 	}
-	
+
 	#section1 {
 		background-size: 1200px auto;
 	}
-	
+
 	#section1 .intro {
 		margin: 100px 0;
-	}		
-	
+	}
+
 	#section1 .intro h3 {
 		font-size: 24px; font-size: 2.4rem;
 		line-height: 24px;
 	}
-	
+
 	.section .content {
 	    margin-top: 50px;
 	}
-	
+
 	.container-fluid {
 	    padding-left: 105px;
 	    padding-right: 105px;
     }
-	
+
 
 }
 
 @media screen and (max-width: 979px) {
-	
+
 	.section h2 {
 	    font-size: 48px; font-size: 3.8rem;
 	    line-height: 58px;
 	}
-	
+
 	.section .title hr {
 	    margin-top: 40px;
 	}
-	
+
 	.section .desc .span8 {
     	width: 100%;
 	}
-	
+
 	#section1 .intro h1 {
 		font-size: 70px; font-size: 4.0rem;
 		line-height: 70px;
-	}	
-	
+	}
+
 	#section1 .intro h3 {
 		font-size: 22px; font-size: 2.2rem;
 		line-height: 22px;
@@ -821,12 +822,12 @@ a:hover {
 	#section5 .content .span4 {
 		padding-right: 0px;
 	}
-	
+
 	.container-fluid {
 	    padding-left: 75px;
 	    padding-right: 75px;
-	}	
-		
+	}
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 979px) {
@@ -834,11 +835,11 @@ a:hover {
 	#section1 .intro h3 {
 		width: 85%;
 	}
-	
+
 	#section2 .content .expand {
 		width: 48.6188%;
 	}
-	
+
 	#section4 .content .expand {
 		width: 100%;
 	}
@@ -847,53 +848,53 @@ a:hover {
 
 
 @media (max-width: 767px) {
-	
+
 	body {
 		padding: 0px;
 	}
-		
+
 	.section {
 		padding: 100px 0;
 	}
-	
+
 	.section .content {
 	    margin-top: 0;
 	}
-	
+
 	.section .content .pull-right {
     	float:left;
     }
-	
+
 	.section h4 {
 		margin-top: 30px;
 	}
-	
+
 	.section .title hr {
 		margin-left: 0px;
 	}
-		
+
 	#section1 {
 		background-size: 920px auto;
 	}
-	
+
 	#section1 .intro {
 		margin: 60px 0;
 	}
-	
+
 	#section1 .intro h3 {
 		width: 55%;
 	}
-	
+
 	#section3 .content img {
     	margin-top: 30px;
     	padding: 1.5%;
     }
-        
+
     #section5 .span8 {
 	    margin-top: 30px;
     }
-    
-	
+
+
 }
 
 @media screen and (min-width: 481px) and (max-width: 649px) {
@@ -902,7 +903,7 @@ a:hover {
 		font-size: 60px; font-size: 4rem;
 		line-height: 60px;
 	}
-	
+
 	#section1 .intro h3 {
 		font-size: 20px; font-size: 2rem;
 	}
@@ -910,25 +911,25 @@ a:hover {
 }
 
 @media screen and (min-width: 481px) {
-	
+
 	#section1 {
-		background-image:url(../img/intro-bg.jpg);
+		background-image:url(../img/background.jpg);
 	}
-	
+
 }
 
 
 @media screen and (max-width: 480px) {
-	 
+
 	.section{
 		padding: 80px 0;
 	}
-	
+
 	#section1 {
 	    background-size: 1024px auto;
 	    padding: 60px 0;
 	}
-	
+
 	#section1 .intro {
 		margin: 30px 0;
 	}
@@ -937,13 +938,13 @@ a:hover {
 		font-size: 50px; font-size: 4rem;
 		line-height: 50px;
 	}
-	
+
 	#section1 .intro h3 {
 		font-size: 22px; font-size: 2.2rem;
 		line-height: 24px;
 		width: 100%;
 	}
-	
+
 	#section1 .thumb {
 		background: #95a5a6;
 	    display: block;
@@ -951,14 +952,14 @@ a:hover {
 	    max-width: 80%;
 	    padding: 3%;
 	}
-	
+
 	#section3 .table th, #section3 .table td {
     	font-size: 11px; font-size: 1.1rem;
 	}
-	
+
 	#section4 h4 {
 	    height: auto;
-	}    
+	}
 
 	#welcome h2 {
 		font-family: 'Open Sans', sans-serif;
@@ -967,7 +968,3 @@ a:hover {
 	}
 
 }
-
-
-
-
